dando segundo deploy

--- a/client/desktop/package.json
+++ b/client/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "desktop",
-  "homepage": "https://icei-puc-minas-pmv-ads.github.io/pmv-ads-2024-2-e4-proj-dad-t3-autocare/",
+  "homepage": "https://github.com/gildoamaral/autocare",
   "private": true,
   "version": "0.0.0",
   "type": "module",
